correção dos caminhos relativos das imagens

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <div class="menuLogoWrapper">
-                <img src="/assets/img/emblema.png" alt="">
+                <img src="./assets/img/emblema.png" alt="">
                 <div class="menuWrapper">
                     <ul>
                         <li><a href="#home" data-barba="link">Página Inicial</a></li>
@@ -41,7 +41,7 @@
                             </div>
                             <div class="countdown-container">
                                 <div class="containerIlustracaoNoivos">
-                                    <img src="/assets/img/Diby.png">
+                                    <img src="./assets/img/Diby.png">
                                 </div>
                                 <div class="countdown-clock">
                                     <div id="days" class="time-segment">
@@ -62,7 +62,7 @@
                                     </div>
                                 </div>
                                 <div class="containerIlustracaoNoivos">
-                                    <img src="/assets/img/Sthe.png">
+                                    <img src="./assets/img/Sthe.png">
                                 </div>
                                 <div id="countdownMessage"></div>
                             </div>
@@ -79,7 +79,7 @@
                     <div class="noivosConteudoContainer">
                         <div>
                             <div>
-                                <img src="/assets/img/sthediby01.jpg" class="imageCarousel">
+                                <img src="./assets/img/sthediby01.jpg" class="imageCarousel">
                             </div>
                         </div>
                         <div class="testimonial-card">
