--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sthefanny & Gabriel</title>
-
+    <link rel="icon" href="./assets/img/favicons/pinkHeart.png" type="image/x-icon">
     <!-- Fontes e Estilos -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -146,3 +146,10 @@
     </script>
 </body>
 </html>
+
+<!--
+FALTA:
+CAROUSEL
+REVISAO RESPONSIVO
+LIMPEZA DO CODIGO
+-->
