padronização fundo e titulo

--- a/noivos.html
+++ b/noivos.html
@@ -41,7 +41,7 @@
             <section id="noivos">
                 <!-- Conteúdo da página "Os Noivos" -->
                 <div class="noivosContainer">
-                    <h1 class="sectionTitleClear">Os Noivos</h1>
+                    <h1 class="sectionTitle">Os Noivos</h1>
                     <div class="noivosConteudoContainer">
                         <div>
                             <div>
